--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>tabbar</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+
+    </div>
     <!-- built files will be auto injected -->
+
   </body>
 </html>
+
